force-app/main/default/objects/Patient_Note__c/Patient_Note__c.object-meta.xml
<CustomObject>
    <label>Patient Note</label>
    <pluralLabel>Patient Notes</pluralLabel>
    <nameField>
        <label>Note Number</label>
        <type>AutoNumber</type>
        <displayFormat>NOTE-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>