force-app/main/default/objects/Patient_Note__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <type>Lookup</type>
    <referenceTo>Patient__c</referenceTo>
    <relationshipName>PatientNotes</relationshipName>
    <relationshipLabel>Patient Notes</relationshipLabel>
</CustomField>